# sdl_stuff

./: CMakeLists.txt
src/: main.c
